# origin

./: .gitignore  .tgitconfig  CMakeLists.txt  CTestCustom.cmake.in  Makefile  README.md  cmake_uninstall.cmake.in  index.html  index.md  params.json  start.html  start.md
cmake/: CMakeLists.txt  CheckCXXConcepts.cmake  CheckCXXSymbolExists.cmake  CheckSymbolExists.cxx.in  CompileTestDriver.cmake.in  GenerateExportHeader.cmake  OriginConfig.cmake.in  OriginTesting.cmake  OriginUtilities.cmake
doc/: regular.md
include/: footer.html  header.html  prelude.html
origin/: CMakeLists.txt  algorithm.hpp  concepts  concepts.hpp  functional  functional.hpp  generic.hpp  iterator.hpp  memory.hpp  origin.cpp  range.hpp
origin.graph/: CMakeLists.txt  adjacency_list.cpp  adjacency_list.hpp  adjacency_vector.cpp  adjacency_vector.hpp  concepts.hpp  config.hpp.in  edge.hpp  graph.hpp  handle.hpp  io.hpp
origin.graph/adjacency_list.impl/: pool.hpp
origin.graph/adjacency_list.test/: CMakeLists.txt  adjacency_list.cpp  pool.cpp
origin.graph/adjacency_vector.test/: adjacency_vector.cpp
origin.graph/graph.test/: testing.hpp
origin.graph/handle.test/: CMakeLists.txt  handle.cpp
origin.graph/origin/graph/: CMakeLists.txt  adjacency_list.cpp  adjacency_list.hpp  adjacency_vector.cpp  adjacency_vector.hpp  edge.hpp  graph.hpp  io.hpp
origin.graph/origin/graph/adjacency_list.impl/: pool.hpp
origin.graph/origin/graph/adjacency_list.test/: CMakeLists.txt  adjacency_list.cpp  pool.cpp
origin.graph/origin/graph/adjacency_vector.test/: adjacency_vector.cpp
origin.graph/origin/graph/graph.test/: testing.hpp
origin.graph/origin/graph/handle.test/: CMakeLists.txt  handle.cpp
origin.math/: CMakeLists.txt  config.hpp.in  numeric.cpp  numeric.hpp  stats.cpp  stats.hpp
origin/algorithm/: CMakeLists.txt  concepts.hpp  config.hpp.in  copy.cpp  copy.hpp  count.cpp  count.hpp  equal.cpp  equal.hpp  find.cpp  find.hpp  foreach.cpp  foreach.hpp  quantifier.cpp  quantifier.hpp  uninitialized.cpp  uninitialized.hpp
origin/algorithm/algorithm.test/: CMakeLists.txt  adjacent_find.cpp  all_of.cpp  any_of.cpp  copy.cpp  count.cpp  count_if.cpp  equal.cpp  find.cpp  find_end.cpp  find_first_of.cpp  find_if.cpp  find_if_not.cpp  for_each.cpp  mismatch.cpp  none_of.cpp
origin/core/: CMakeLists.txt  concepts.cpp  concepts.hpp  config.hpp.in  finally.cpp  finally.hpp  function.cpp  function.hpp  semantics.cpp  semantics.hpp  traits.cpp  traits.hpp  type.cpp  type.hpp
origin/core/concepts.test/: CMakeLists.txt  assignable.cpp  binary_operation.cpp  boolean.cpp  character.cpp  common.cpp  common_type.cpp  conditional.cpp  constructible.cpp  convertible.cpp  copy_assignable.cpp  copy_constructible.cpp  copyable.cpp  default_constructible.cpp  derived.cpp  destructible.cpp  difference_type.cpp  equality_comparable.cpp  function.cpp  integral.cpp  movable.cpp  move_assignable.cpp  move_constructible.cpp  ordered.cpp  predicate.cpp  regular.cpp  relation.cpp  same.cpp  semiregular.cpp  signed_integer.cpp  totally_ordered.cpp  unsigned_integer.cpp  value_type.cpp  void.cpp  weakly_ordered.cpp
origin/core/finally.test/: CMakeLists.txt  finally.cpp
origin/core/function.test/: CMakeLists.txt  invoke.cpp
origin/data/: CMakeLists.txt  config.hpp.in  vector.cpp  vector.hpp  vector.ipp
origin/iterator/: CMakeLists.txt  concepts.hpp  config.hpp.in  core.cpp  core.hpp
origin/iterator/concepts.test/: CMakeLists.txt  advanceable.cpp  bidirectional_iterator.cpp  forward_iterator.cpp  incrementable.cpp  input_iterator.cpp  mutable.cpp  output_iterator.cpp  permutable.cpp  random_access_iterator.cpp  readable.cpp  test_iterator.hpp  test_resource.hpp  writable.cpp
origin/iterator/core.test/: CMakeLists.txt  advanceable.cpp  bidirectional_iterator.cpp  forward_iterator.cpp  incrementable.cpp  input_iterator.cpp  mutable.cpp  output_iterator.cpp  permutable.cpp  random_access_iterator.cpp  readable.cpp  test_iterator.hpp  value_type.cpp  writable.cpp
origin/memory/: CMakeLists.txt  allocator.cpp  allocator.hpp  allocator.ipp  config.hpp.in  memory.cpp  memory.hpp
origin/numeric/: CMakeLists.txt  algebra.cpp  algebra.hpp  config.hpp.in  numeric.cpp  numeric.hpp
origin/numeric/algebra.test/: CMakeLists.txt  foldl.cpp
origin/range/: CMakeLists.txt  algorithm.hpp  concepts.hpp  config.hpp.in  core.hpp  range.cpp  range.hpp  stream.hpp
origin/range/algorithm.test/: CMakeLists.txt  adjacent_find.cpp  all_of.cpp  find.cpp  find_end.cpp  find_if.cpp  for_each.cpp
origin/range/concepts.test/: CMakeLists.txt  bidirectional_range.cpp  forward_range.cpp  input_range.cpp  iterator_type.cpp  output_range.cpp  random_access_range.cpp  range.cpp  size_type.cpp  value_type.cpp
origin/range/core.test/: CMakeLists.txt  bidirectional_range.cpp  forward_range.cpp  input_range.cpp  iterator_type.cpp  output_range.cpp  random_access_range.cpp  range.cpp  sentinel_type.cpp  size_type.cpp  test_resource.hpp  value_type.cpp
origin/range/range.test/: CMakeLists.txt  bounded.cpp  size.cpp
origin/range/stream.test/: CMakeLists.txt  concepts.cpp  istream_range.cpp  typed_ostream.cpp
origin/sequence/: CMakeLists.txt  algorithm.hpp  concepts.hpp  range.hpp  uninitialized.cpp  uninitialized.hpp
origin/sequence/algorithm.test/: CMakeLists.txt  all_of.cpp  any_of.cpp  copy.cpp  count.cpp  count_if.cpp  equal.cpp  find_first_of.cpp  find_if_not.cpp  for_each.cpp  mismatch.cpp  none_of.cpp
origin/sequence/concepts.test/: CMakeLists.txt  advanceable.cpp  bidirectional_range.cpp  forward_iterator.cpp  forward_range.cpp  incrementable.cpp  input_iterator.cpp  input_range.cpp  iterator_type.cpp  mutable.cpp  output_iterator.cpp  output_range.cpp  permutable.cpp  random_access_iterator.cpp  random_access_range.cpp  range.cpp  readable.cpp  sentinel_type.cpp  size_type.cpp  test_iterator.hpp  test_resource.hpp  value_type.cpp  writable.cpp
origin/sequence/range.test/: CMakeLists.txt  bounded.cpp  size.cpp
origin/sequence/stream.test/: experiment.cpp  istream_for.cpp  ostream_range.cpp  typed_istream.cpp
ref/: concepts.html  (+1 more)
(+25 files in other folders)
